# wgpu_minimal_example_on_bevy

./: Cargo.toml  LICENSE
docs/: README.md
src/: main.rs
wgpu_crate/: Cargo.toml
wgpu_crate/src/: lib.rs  shader.wgsl
wgpu_crate/tests/: test.rs
