[workspace]
members = [
    "wgpu_crate",
]

[package]
name = "wgpu_minimal_example_on_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["bevy_dev_tools"] }
bytemuck = "1.24.0"
crossbeam-channel = "0.5.15"
rand = "0.9.2"
wgpu_crate = { path = "wgpu_crate" }
